# S.A.A.U.S.O

./: .clangd  .gitignore  AGENTS.md  BUILD.gn  PLAN.md  README.md  build.sh  build_saauso.sh
.trae/documents/: BaseException解耦规划.md  Builtins归属与初始化链路治理方案.md  CPython312异常处理MVP计划.md  CPython312异常处理Step2执行计划.md  CPython错误机制与SAAUSO现状缺口.md  Embedder-API-MVP-Plan.md  Execution静态门面治理计划.md  Factory属性字典自动分配架构升级计划.md  InterpreterRun异常传播治理计划.md  MRO属性查询Lookup与Get API重构计划.md  MaybeHandle错误传播改造计划.md  PyDict异常传播改造方案.md  Saauso-Container-GC-Risk-Audit-And-Roadmap.md  Step2错误信息与MaybeHandle完善计划.md  dict-runtime与PyDict原语使用边界与后续治理计划.md  ispy-like-migration-phased-plan.md  native-layoutkind-allocation-and-container-subclassing-plan.md  object-checkers解耦评估与实施计划.md  plan-Accessor机制收敛__class____dict__与描述符过渡层.md  plan-ExceptionRoots-改造实施.md  plan-GetTypeName-批量替换.md  plan-HandleScope-Escapable旧构造拔除分阶段计划.md  plan-PyList-Tagged读取清理与GC安全治理.md  plan-PyList-尾部对象保活修复与回归测试.md  plan-ST阶段二-调用点透传.md  plan-Script-Compile-Run-API-重构.md  plan-TryCatch-Exception-改为空Local返回.md  plan-api-impl层冗余HandleTagged转换集中治理.md  plan-attr显式isolate三期一步到位治理.md  plan-basics-unittest-进一步拆分治理.md  plan-constructinstance-split-new-init.md  plan-dict-explicit-isolate-phase4-p2-p5.md  plan-embedder-api-maybe-统一改造.md  plan-embedder-interop-unittest-拆分执行方案.md  plan-handle显式isolate-第一批调用面铺开.md  plan-host-to-receiver-最小侵入重命名与回归方案.md  plan-initinstance-abi-map-to-python-init.md  (+30 more)
depot_tools/: README.md
docs/: Embedder-API-Architecture-Design.md  Embedder-API-Function-CR-Checklist.md  Embedder-API-Phase0-2-CR-Report.md  Embedder-API-Phase0-2-Progress-and-Architecture.md  Embedder-API-Phase3-CR-Report.md  Embedder-API-Phase3-Function-CR-Checklist.md  Embedder-API-Phase3-Progress-and-Architecture.md  Embedder-API-接入指南.md  Embedder-API-架构亮点总结.md  Embedder-API-架构设计思路.md  Saauso-AI-Developer-Contributing-Guide.md  Saauso-Build-and-Test-Guide.md  Saauso-Coding-Style-Guide.md  Saauso-Embedder-API-User-Guide.md  Saauso-Project-Structure-And-Reading-Guide.md  Saauso-VM-Engineering-Constraints.md  Saauso-VM-System-Architecture.md
docs/thesis/: draft.md  (+2 more)
include/: saauso-container.h  saauso-context.h  saauso-embedder-callbacks.h  saauso-embedder-core.h  saauso-embedder-objects.h  saauso-embedder-values.h  saauso-embedder.h  saauso-exception.h  saauso-function-callback.h  saauso-function.h  saauso-initialization.h  saauso-internal.h  saauso-isolate.h  saauso-local-handle.h  saauso-locker.h  saauso-maybe.h  saauso-object.h  saauso-primitive.h  saauso-script.h  saauso-value.h  saauso.h
logo/: architecture.pptx  logo-with-title.psd
samples/: README.md  bubble-sort-benchmark.cc  bubble-sort.cc  call-python-func-in-cpp.cc  catch-python-exception.cc  fibonacci-benchmark.cc  game-engine-demo.cc  hello-world.cc  inject-cpp-func-to-python-world.cc  major-gc-benchmark.cc  object-create-benchmark.cc  object-method-call-benchmark.cc
src/: main.cc
test/embedder/: BUILD.gn  embedder-handle-thread-unittest.cc  embedder-interop-callback-unittest.cc  embedder-interop-context-unittest.cc  embedder-interop-unittest.cc  embedder-interop-value-unittest.cc  embedder-isolate-locker.cc  embedder-isolate-unittest.cc  embedder-script-unittest.cc  embedder-thread-unittest.cc  lsan-suppressions.cc
test/unittests/: BUILD.gn  attribute-unittest.cc  basic-interpreter-unittest.cc  gc-unittest.cc  global-handle-unittest.cc  handle-thread-unittest.cc  handle-unittest.cc  py-dict-unittest.cc  py-float-unittest.cc  py-list-unittest.cc  py-object-unittest.cc  py-objects-unittest.cc  py-smi-unittest.cc  py-string-unittest.cc  py-tuple-unittest.cc  pyc-file-parser-unittest.cc  test-helpers.cc  test-helpers.h  test-utils.cc  test-utils.h
test/unittests/code/: compiler-unittest.cc  pyc-file-parser-unittest.cc
test/unittests/handles/: global-handle-unittest.cc  handle-thread-unittest.cc  handle-unittest.cc
test/unittests/heap/: gc-interpreter-stress-unittest.cc  gc-unittest.cc  old-space-unittests.cc
test/unittests/interpreter/: README.md  interpreter-attribute-constraints-unittest.cc  interpreter-builtins-bootstrap-unittest.cc  interpreter-builtins-constructor-unittest.cc  interpreter-builtins-method-dispatch-unittest.cc  interpreter-builtins-seq-unittest.cc  interpreter-builtins-subclass-gc-unittest.cc  interpreter-call-stack-unittest.cc  interpreter-closure-unittest.cc  interpreter-controlflow-unittest.cc  interpreter-custom-class-attribute-binding-unittest.cc  interpreter-custom-class-basics-unittest.cc  interpreter-custom-class-build-class-unittest.cc  interpreter-custom-class-builtin-bridge-unittest.cc  interpreter-custom-class-construct-unittest.cc  interpreter-custom-class-core-unittest.cc  interpreter-custom-class-dunder-unittest.cc  interpreter-custom-class-mro-unittest.cc  interpreter-custom-class-unittest.cc  interpreter-dict-unittest.cc  interpreter-exceptions-format-unittest.cc  interpreter-exceptions-iteration-unittest.cc  interpreter-exceptions-trycatch-unittest.cc  interpreter-exceptions-unittest.cc  interpreter-exceptions-unwind-unittest.cc  interpreter-exec-unittest.cc  interpreter-functions-args-binding-unittest.cc  interpreter-functions-call-errors-unittest.cc  interpreter-functions-call-unpack-unittest.cc  interpreter-functions-recursion-unittest.cc  interpreter-functions-unittest.cc  interpreter-functions-varargs-def-unittest.cc  interpreter-import-unittest.cc  interpreter-lambda-unittests.cc  interpreter-list-basic-unittest.cc  interpreter-list-exceptions-unittest.cc  interpreter-list-sort-unittest.cc  interpreter-list-subclass-unittest.cc  interpreter-list-unittest.cc  interpreter-math-module-unittest.cc  (+7 more)
test/unittests/objects/: attribute-unittest.cc  cell-unittest.cc  factory-boundary-unittest.cc  py-dict-unittest.cc  py-float-unittest.cc  py-list-unittest.cc  py-module-unittest.cc  py-object-unittest.cc  py-smi-unittest.cc  py-string-unittest.cc  py-tuple-unittest.cc
test/unittests/utils/: number-conversion-unittest.cc  random-number-generator-unittest.cc  string-search-unittest.cc
testing/gtest/: BUILD.gn
tools/: disassemble312.py  show_pyc.py
(+415 files in other folders)
