# Copyright 2026 the S.A.A.U.S.O project authors. All rights reserved.
# Use of this source code is governed by a GNU-style license that can be
# found in the LICENSE file.

config("saauso_includes") {
  include_dirs = [ "//" ]
}

# 将核心代码定义为 source_set 或 static_library
# source_set 在 Chromium 中更常用，因为它只是逻辑上的分组，不生成 .a/.lib
source_set("saauso_sources") {
  sources = [
    # include
    "//include/saauso-internal.h",

    # build (配置头文件)
    "//src/build/build_config.h",
    "//src/build/buildflag.h",

    # utils
    "//src/utils/allocation.h",
    "//src/utils/utils.h",
    "//src/utils/vector.h",

    # code (代码解析相关)
    "//src/code/binary-file-reader.cc",
    "//src/code/binary-file-reader.h",
    "//src/code/pyc-file-parser.cc",
    "//src/code/pyc-file-parser.h",

    # handles
    "//src/handles/handle_scope_implementer.cc",
    "//src/handles/handle_scope_implementer.h",
    "//src/handles/handles.cc",
    "//src/handles/handles.h",
    "//src/handles/tagged.h",

    # heap (堆管理)
    "//src/heap/heap.cc",
    "//src/heap/heap.h",
    "//src/heap/scavenge-visitor.h",
    "//src/heap/spaces.cc",
    "//src/heap/spaces.h",

    # objects (对象系统)
    "//src/objects/klass.cc",
    "//src/objects/klass.h",
    "//src/objects/mark-word.cc",
    "//src/objects/mark-word.h",
    "//src/objects/objects.h",
    "//src/objects/py-code-object-klass.cc",
    "//src/objects/py-code-object-klass.h",
    "//src/objects/py-code-object.cc",
    "//src/objects/py-code-object.h",
    "//src/objects/py-float-klass.cc",
    "//src/objects/py-float-klass.h",
    "//src/objects/py-float.cc",
    "//src/objects/py-float.h",
    "//src/objects/py-list-klass.cc",
    "//src/objects/py-list-klass.h",
    "//src/objects/py-list.cc",
    "//src/objects/py-list.h",
    "//src/objects/py-object.cc",
    "//src/objects/py-object.h",
    "//src/objects/py-oddballs-klass.cc",
    "//src/objects/py-oddballs-klass.h",
    "//src/objects/py-oddballs.cc",
    "//src/objects/py-oddballs.h",
    "//src/objects/py-smi-klass.cc",
    "//src/objects/py-smi-klass.h",
    "//src/objects/py-smi.cc",
    "//src/objects/py-smi.h",
    "//src/objects/py-string-klass.cc",
    "//src/objects/py-string-klass.h",
    "//src/objects/py-string.cc",
    "//src/objects/py-string.h",
    "//src/objects/visitors.h",

    # runtime (运行时)
    "//src/runtime/factory.h",
    "//src/runtime/universe.cc",
    "//src/runtime/universe.h",

    # third_party (第三方库)
    "//third_party/rapidhash/rapidhash.h",
  ]

  # 加载基础配置
  public_configs = [ ":saauso_includes" ]
}

executable("vm") {
  sources = [ "//src/main.cc" ]
  deps = [ ":saauso_sources" ]
}

executable("ut") {
  testonly = true  # 声明这只是一个测试目标

  sources = [
    # 在这里添加你的测试文件
    "//test/unittests/handle-unittest.cc",
    "//test/unittests/py-objects-unittest.cc",
  ]

  deps = [
    ":saauso_sources",
    "//testing/gtest",
  ]
}
