# Copyright 2026 the S.A.A.U.S.O project authors. All rights reserved.
# Use of this source code is governed by a GNU-style license that can be
# found in the LICENSE file.

config("saauso_includes") {
  include_dirs = [ "//" ]
}

# 将核心代码定义为 source_set 或 static_library
# source_set 在 Chromium 中更常用，因为它只是逻辑上的分组，不生成 .a/.lib
source_set("saauso_core") {
  sources = [
    # include
    "//include/saauso-internal.h",

    # build (配置头文件)
    "//src/build/build_config.h",
    "//src/build/buildflag.h",

    # utils
    "//src/utils/allocation.cc",
    "//src/utils/allocation.h",
    "//src/utils/binary-file-reader.cc",
    "//src/utils/binary-file-reader.h",
    "//src/utils/file-utils.cc",
    "//src/utils/file-utils.h",
    "//src/utils/number-conversion.cc",
    "//src/utils/number-conversion.h",
    "//src/utils/random-number-generator.cc",
    "//src/utils/random-number-generator.h",
    "//src/utils/stable-merge-sort.cc",
    "//src/utils/stable-merge-sort.h",
    "//src/utils/string-search.cc",
    "//src/utils/string-search.h",
    "//src/utils/utils.h",
    "//src/utils/vector.h",

    # code (代码解析相关)
    "//src/code/compiler.cc",
    "//src/code/compiler.h",
    "//src/code/cpython312-pyc-file-parser.cc",
    "//src/code/cpython312-pyc-file-parser.h",

    # handles
    "//src/handles/global-handles.h",
    "//src/handles/handle_scope_implementer.cc",
    "//src/handles/handle_scope_implementer.h",
    "//src/handles/handles.cc",
    "//src/handles/handles.h",
    "//src/handles/tagged.h",

    # heap (堆管理)
    "//src/heap/heap.cc",
    "//src/heap/heap.h",
    "//src/heap/scavenge-visitor.cc",
    "//src/heap/scavenge-visitor.h",
    "//src/heap/spaces.cc",
    "//src/heap/spaces.h",

    # objects (对象系统)
    "//src/objects/cell-klass.cc",
    "//src/objects/cell-klass.h",
    "//src/objects/cell.cc",
    "//src/objects/cell.h",
    "//src/objects/fixed-array-klass.cc",
    "//src/objects/fixed-array-klass.h",
    "//src/objects/fixed-array.cc",
    "//src/objects/fixed-array.h",
    "//src/objects/klass-default-vtable.cc",
    "//src/objects/klass.cc",
    "//src/objects/klass.h",
    "//src/objects/mark-word.cc",
    "//src/objects/mark-word.h",
    "//src/objects/objects.h",
    "//src/objects/py-code-object-klass.cc",
    "//src/objects/py-code-object-klass.h",
    "//src/objects/py-code-object.cc",
    "//src/objects/py-code-object.h",
    "//src/objects/py-dict-klass.cc",
    "//src/objects/py-dict-klass.h",
    "//src/objects/py-dict-views-klass.cc",
    "//src/objects/py-dict-views-klass.h",
    "//src/objects/py-dict-views.cc",
    "//src/objects/py-dict-views.h",
    "//src/objects/py-dict.cc",
    "//src/objects/py-dict.h",
    "//src/objects/py-float-klass.cc",
    "//src/objects/py-float-klass.h",
    "//src/objects/py-float.cc",
    "//src/objects/py-float.h",
    "//src/objects/py-function-klass.cc",
    "//src/objects/py-function-klass.h",
    "//src/objects/py-function.cc",
    "//src/objects/py-function.h",
    "//src/objects/py-list-iterator-klass.cc",
    "//src/objects/py-list-iterator-klass.h",
    "//src/objects/py-list-iterator.cc",
    "//src/objects/py-list-iterator.h",
    "//src/objects/py-list-klass.cc",
    "//src/objects/py-list-klass.h",
    "//src/objects/py-list.cc",
    "//src/objects/py-list.h",
    "//src/objects/py-module-klass.cc",
    "//src/objects/py-module-klass.h",
    "//src/objects/py-module.cc",
    "//src/objects/py-module.h",
    "//src/objects/py-object-klass.cc",
    "//src/objects/py-object-klass.h",
    "//src/objects/py-object.cc",
    "//src/objects/py-object.h",
    "//src/objects/py-oddballs-klass.cc",
    "//src/objects/py-oddballs-klass.h",
    "//src/objects/py-oddballs.cc",
    "//src/objects/py-oddballs.h",
    "//src/objects/py-smi-klass.cc",
    "//src/objects/py-smi-klass.h",
    "//src/objects/py-smi.cc",
    "//src/objects/py-smi.h",
    "//src/objects/py-string-klass.cc",
    "//src/objects/py-string-klass.h",
    "//src/objects/py-string.cc",
    "//src/objects/py-string.h",
    "//src/objects/py-tuple-iterator-klass.cc",
    "//src/objects/py-tuple-iterator-klass.h",
    "//src/objects/py-tuple-iterator.cc",
    "//src/objects/py-tuple-iterator.h",
    "//src/objects/py-tuple-klass.cc",
    "//src/objects/py-tuple-klass.h",
    "//src/objects/py-tuple.cc",
    "//src/objects/py-tuple.h",
    "//src/objects/py-type-object-klass.cc",
    "//src/objects/py-type-object-klass.h",
    "//src/objects/py-type-object.cc",
    "//src/objects/py-type-object.h",
    "//src/objects/visitors.h",

    # 解释器
    "//src/interpreter/bytecodes.h",
    "//src/interpreter/frame-object-builder.cc",
    "//src/interpreter/frame-object-builder.h",
    "//src/interpreter/frame-object.cc",
    "//src/interpreter/frame-object.h",
    "//src/interpreter/interpreter-dispatcher.cc",
    "//src/interpreter/interpreter.cc",
    "//src/interpreter/interpreter.h",

    # init
    "//src/init/saauso.cc",

    # execution
    "//src/execution/isolate-klass-list.h",
    "//src/execution/isolate.cc",
    "//src/execution/isolate.h",

    # runtime (运行时)
    "//src/runtime/runtime-conversions.cc",
    "//src/runtime/runtime-exec.cc",
    "//src/runtime/runtime-intrinsics.cc",
    "//src/runtime/runtime-iterable.cc",
    "//src/runtime/runtime-py-dict.cc",
    "//src/runtime/runtime-py-smi.cc",
    "//src/runtime/runtime-py-string.cc",
    "//src/runtime/runtime-reflection.cc",
    "//src/runtime/runtime-truthiness.cc",
    "//src/runtime/runtime.h",
    "//src/runtime/string-table.cc",
    "//src/runtime/string-table.h",

    # modules (模块系统)
    "//src/modules/builtin-math-module.cc",
    "//src/modules/builtin-module-registry.cc",
    "//src/modules/builtin-module-registry.h",
    "//src/modules/builtin-module.h",
    "//src/modules/builtin-random-module.cc",
    "//src/modules/builtin-sys-module.cc",
    "//src/modules/builtin-time-module.cc",
    "//src/modules/module-finder.cc",
    "//src/modules/module-finder.h",
    "//src/modules/module-importer.cc",
    "//src/modules/module-importer.h",
    "//src/modules/module-loader.cc",
    "//src/modules/module-loader.h",
    "//src/modules/module-manager.cc",
    "//src/modules/module-manager.h",
    "//src/modules/module-name-resolver.cc",
    "//src/modules/module-name-resolver.h",
    "//src/modules/module-utils.cc",
    "//src/modules/module-utils.h",

    # builtins (内建函数)
    "//src/builtins/builtins-debug.cc",
    "//src/builtins/builtins-definitions.h",
    "//src/builtins/builtins-exec.cc",
    "//src/builtins/builtins-io.cc",
    "//src/builtins/builtins-py-dict-methods.cc",
    "//src/builtins/builtins-py-dict-methods.h",
    "//src/builtins/builtins-py-dict-views-methods.cc",
    "//src/builtins/builtins-py-dict-views-methods.h",
    "//src/builtins/builtins-py-list-iterator-methods.cc",
    "//src/builtins/builtins-py-list-iterator-methods.h",
    "//src/builtins/builtins-py-list-methods.cc",
    "//src/builtins/builtins-py-list-methods.h",
    "//src/builtins/builtins-py-string-methods.cc",
    "//src/builtins/builtins-py-string-methods.h",
    "//src/builtins/builtins-py-tuple-iterator-methods.cc",
    "//src/builtins/builtins-py-tuple-iterator-methods.h",
    "//src/builtins/builtins-py-tuple-methods.cc",
    "//src/builtins/builtins-py-tuple-methods.h",
    "//src/builtins/builtins-py-type-object-methods.cc",
    "//src/builtins/builtins-py-type-object-methods.h",
    "//src/builtins/builtins-reflection.cc",
    "//src/builtins/builtins-utils.h",

    # third_party (第三方库)
    "//third_party/fast_float/fast_float.h",
    "//third_party/rapidhash/rapidhash.h",
  ]

  public_configs = [ ":saauso_includes" ]
}

# 接入cpython312编译器前端
source_set("saauso_cpython312_compiler") {
  sources = [
    "//src/code/cpython312-pyc-compiler.cc",
    "//src/code/cpython312-pyc-compiler.h",
  ]

  public_deps = [ "//third_party/cpython312" ]

  public_configs = [ ":saauso_includes" ]
}

executable("vm") {
  sources = [ "//src/main.cc" ]
  deps = [
    ":saauso_core",
    ":saauso_cpython312_compiler",
  ]
}

group("ut") {
  testonly = true
  deps = [ "//test/unittests:ut" ]
}
