# Copyright 2026 the S.A.A.U.S.O project authors. All rights reserved.
# Use of this source code is governed by a GNU-style license that can be
# found in the LICENSE file.

# =============================================================================
# 根 BUILD 维护说明（请先阅读）
# =============================================================================
# 1) 该文件负责定义：
#    - VM 核心实现目标（saauso_core）
#    - 可选的 CPython312 前端编译器目标（saauso_cpython312_compiler）
#    - Embedder API 及示例目标（embedder_api / embedder_hello_world）
#    - 统一测试入口（ut）
# 2) 依赖方向约束：
#    - 上层目标可依赖 saauso_core，但 saauso_core 不依赖上层目标。
#    - embedder_api 是对 saauso_core 的包装层，后续 Phase2+ 继续扩展。
# 3) 修改建议：
#    - 新增核心源码优先放入 saauso_core 的对应分区。
#    - 新增对外 API 相关实现放入 src/api，并挂入 embedder_api。
#    - 新增 Embedder 示例需同时纳入头文件边界检查 action。
# =============================================================================

# 宽 include 配置：面向核心目标与历史测试目标，允许使用仓库根路径做 include 根。
# 说明：这是“内部开发便利”配置，不等价于“对外 API 边界”。
config("saauso_includes") {
  include_dirs = [ "//" ]
}

# 窄 include 配置：面向 Embedder 对外目标，仅暴露 include/。
# 说明：后续外部工程接入应以该配置为准，避免误依赖 src/** 内部头。
config("saauso_public_api_includes") {
  include_dirs = [ "//include" ]
}

# -----------------------------------------------------------------------------
# 供 VN 内核和上层依赖方公用的基础设施头文件
# -----------------------------------------------------------------------------
source_set("saauso_infra_public_headers") {
  sources = [
    "//include/saauso-initialization.h",
    "//include/saauso-maybe.h",
  ]
}

# -----------------------------------------------------------------------------
# VM 虚拟机内核
# -----------------------------------------------------------------------------
# 采用 source_set：在 Chromium/GN 体系中便于快速增量构建，不直接产出静态库文件。
source_set("saauso_core") {
  visibility = [
    ":embedder_api",
    ":vm",
    "//test/unittests:ut",
  ]

  sources = [
    # include
    "//include/saauso-internal.h",

    # utils
    "//src/utils/allocation.cc",
    "//src/utils/allocation.h",
    "//src/utils/binary-file-reader.cc",
    "//src/utils/binary-file-reader.h",
    "//src/utils/file-utils.cc",
    "//src/utils/file-utils.h",
    "//src/utils/number-conversion.cc",
    "//src/utils/number-conversion.h",
    "//src/utils/random-number-generator.cc",
    "//src/utils/random-number-generator.h",
    "//src/utils/stable-merge-sort.cc",
    "//src/utils/stable-merge-sort.h",
    "//src/utils/string-search.cc",
    "//src/utils/string-search.h",
    "//src/utils/utils.h",
    "//src/utils/vector.h",

    # code (代码解析相关)
    "//src/code/compiler.cc",
    "//src/code/compiler.h",
    "//src/code/cpython312-pyc-file-parser.cc",
    "//src/code/cpython312-pyc-file-parser.h",

    # handles
    "//src/handles/global-handles.h",
    "//src/handles/handle-base.cc",
    "//src/handles/handle-base.h",
    "//src/handles/handle-scope-implementer.cc",
    "//src/handles/handle-scope-implementer.h",
    "//src/handles/handle-scopes.cc",
    "//src/handles/handle-scopes.h",
    "//src/handles/handles.h",
    "//src/handles/maybe-handles.h",
    "//src/handles/tagged.h",

    # heap (堆管理)
    "//src/heap/factory.cc",
    "//src/heap/factory.h",
    "//src/heap/heap.cc",
    "//src/heap/heap.h",
    "//src/heap/scavenge-visitor.cc",
    "//src/heap/scavenge-visitor.h",
    "//src/heap/spaces.cc",
    "//src/heap/spaces.h",

    # objects (对象系统)
    "//src/objects/cell-klass.cc",
    "//src/objects/cell-klass.h",
    "//src/objects/cell.cc",
    "//src/objects/cell.h",
    "//src/objects/fixed-array-klass.cc",
    "//src/objects/fixed-array-klass.h",
    "//src/objects/fixed-array.cc",
    "//src/objects/fixed-array.h",
    "//src/objects/klass-vtable-trampolines.cc",
    "//src/objects/klass-vtable-trampolines.h",
    "//src/objects/klass-vtable.cc",
    "//src/objects/klass-vtable.h",
    "//src/objects/klass.cc",
    "//src/objects/klass.h",
    "//src/objects/mark-word.cc",
    "//src/objects/mark-word.h",
    "//src/objects/native-function-helpers.h",
    "//src/objects/native-layout-kind.h",
    "//src/objects/object-checkers.cc",
    "//src/objects/object-checkers.h",
    "//src/objects/object-type-list.h",
    "//src/objects/objects.h",
    "//src/objects/py-base-exception-klass.cc",
    "//src/objects/py-base-exception-klass.h",
    "//src/objects/py-base-exception.cc",
    "//src/objects/py-base-exception.h",
    "//src/objects/py-code-object-klass.cc",
    "//src/objects/py-code-object-klass.h",
    "//src/objects/py-code-object.cc",
    "//src/objects/py-code-object.h",
    "//src/objects/py-dict-klass.cc",
    "//src/objects/py-dict-klass.h",
    "//src/objects/py-dict-views-klass.cc",
    "//src/objects/py-dict-views-klass.h",
    "//src/objects/py-dict-views.cc",
    "//src/objects/py-dict-views.h",
    "//src/objects/py-dict.cc",
    "//src/objects/py-dict.h",
    "//src/objects/py-float-klass.cc",
    "//src/objects/py-float-klass.h",
    "//src/objects/py-float.cc",
    "//src/objects/py-float.h",
    "//src/objects/py-function-klass.cc",
    "//src/objects/py-function-klass.h",
    "//src/objects/py-function.cc",
    "//src/objects/py-function.h",
    "//src/objects/py-list-iterator-klass.cc",
    "//src/objects/py-list-iterator-klass.h",
    "//src/objects/py-list-iterator.cc",
    "//src/objects/py-list-iterator.h",
    "//src/objects/py-list-klass.cc",
    "//src/objects/py-list-klass.h",
    "//src/objects/py-list.cc",
    "//src/objects/py-list.h",
    "//src/objects/py-module-klass.cc",
    "//src/objects/py-module-klass.h",
    "//src/objects/py-module.cc",
    "//src/objects/py-module.h",
    "//src/objects/py-object-klass.cc",
    "//src/objects/py-object-klass.h",
    "//src/objects/py-object.cc",
    "//src/objects/py-object.h",
    "//src/objects/py-oddballs-klass.cc",
    "//src/objects/py-oddballs-klass.h",
    "//src/objects/py-oddballs.cc",
    "//src/objects/py-oddballs.h",
    "//src/objects/py-smi-klass.cc",
    "//src/objects/py-smi-klass.h",
    "//src/objects/py-smi.cc",
    "//src/objects/py-smi.h",
    "//src/objects/py-string-klass.cc",
    "//src/objects/py-string-klass.h",
    "//src/objects/py-string.cc",
    "//src/objects/py-string.h",
    "//src/objects/py-tuple-iterator-klass.cc",
    "//src/objects/py-tuple-iterator-klass.h",
    "//src/objects/py-tuple-iterator.cc",
    "//src/objects/py-tuple-iterator.h",
    "//src/objects/py-tuple-klass.cc",
    "//src/objects/py-tuple-klass.h",
    "//src/objects/py-tuple.cc",
    "//src/objects/py-tuple.h",
    "//src/objects/py-type-object-klass.cc",
    "//src/objects/py-type-object-klass.h",
    "//src/objects/py-type-object.cc",
    "//src/objects/py-type-object.h",
    "//src/objects/visitors.h",

    # 解释器
    "//src/interpreter/builtin-bootstrapper.cc",
    "//src/interpreter/builtin-bootstrapper.h",
    "//src/interpreter/bytecodes.h",
    "//src/interpreter/exception-table.cc",
    "//src/interpreter/exception-table.h",
    "//src/interpreter/frame-object-builder.cc",
    "//src/interpreter/frame-object-builder.h",
    "//src/interpreter/frame-object.cc",
    "//src/interpreter/frame-object.h",
    "//src/interpreter/interpreter-dispatcher.cc",
    "//src/interpreter/interpreter.cc",
    "//src/interpreter/interpreter.h",

    # init
    "//src/init/saauso.cc",

    # execution（虚拟机执行层门面）
    "//src/execution/exception-state.cc",
    "//src/execution/exception-state.h",
    "//src/execution/exception-utils.h",
    "//src/execution/execution.cc",
    "//src/execution/execution.h",
    "//src/execution/isolate-klass-list.h",
    "//src/execution/isolate.cc",
    "//src/execution/isolate.h",
    "//src/execution/thread-id.cc",
    "//src/execution/thread-id.h",
    "//src/execution/thread-state-infras.cc",
    "//src/execution/thread-state-infras.h",

    # runtime (运行时)
    "//src/runtime/runtime-conversions.cc",
    "//src/runtime/runtime-conversions.h",
    "//src/runtime/runtime-exceptions.cc",
    "//src/runtime/runtime-exceptions.h",
    "//src/runtime/runtime-exec.cc",
    "//src/runtime/runtime-exec.h",
    "//src/runtime/runtime-intrinsics.cc",
    "//src/runtime/runtime-intrinsics.h",
    "//src/runtime/runtime-iterable.cc",
    "//src/runtime/runtime-iterable.h",
    "//src/runtime/runtime-py-dict.cc",
    "//src/runtime/runtime-py-dict.h",
    "//src/runtime/runtime-py-function.cc",
    "//src/runtime/runtime-py-function.h",
    "//src/runtime/runtime-py-list.cc",
    "//src/runtime/runtime-py-list.h",
    "//src/runtime/runtime-py-smi.cc",
    "//src/runtime/runtime-py-smi.h",
    "//src/runtime/runtime-py-string.cc",
    "//src/runtime/runtime-py-string.h",
    "//src/runtime/runtime-py-tuple.cc",
    "//src/runtime/runtime-py-tuple.h",
    "//src/runtime/runtime-py-type-object.cc",
    "//src/runtime/runtime-py-type-object.h",
    "//src/runtime/runtime-reflection.cc",
    "//src/runtime/runtime-reflection.h",
    "//src/runtime/runtime-truthiness.cc",
    "//src/runtime/runtime-truthiness.h",
    "//src/runtime/string-table.cc",
    "//src/runtime/string-table.h",

    # modules (模块系统)
    "//src/modules/builtin-math-module.cc",
    "//src/modules/builtin-module-registry.cc",
    "//src/modules/builtin-module-registry.h",
    "//src/modules/builtin-module-utils.cc",
    "//src/modules/builtin-module-utils.h",
    "//src/modules/builtin-module.h",
    "//src/modules/builtin-random-module.cc",
    "//src/modules/builtin-sys-module.cc",
    "//src/modules/builtin-time-module.cc",
    "//src/modules/module-finder.cc",
    "//src/modules/module-finder.h",
    "//src/modules/module-importer.cc",
    "//src/modules/module-importer.h",
    "//src/modules/module-loader.cc",
    "//src/modules/module-loader.h",
    "//src/modules/module-manager.cc",
    "//src/modules/module-manager.h",
    "//src/modules/module-name-resolver.cc",
    "//src/modules/module-name-resolver.h",
    "//src/modules/module-utils.cc",
    "//src/modules/module-utils.h",

    # builtins (内建函数)
    "//src/builtins/accessor-proxy.cc",
    "//src/builtins/accessor-proxy.h",
    "//src/builtins/accessors.cc",
    "//src/builtins/accessors.h",
    "//src/builtins/builtins-base-exception-methods.cc",
    "//src/builtins/builtins-base-exception-methods.h",
    "//src/builtins/builtins-debug.cc",
    "//src/builtins/builtins-definitions.h",
    "//src/builtins/builtins-exec.cc",
    "//src/builtins/builtins-io.cc",
    "//src/builtins/builtins-py-dict-methods.cc",
    "//src/builtins/builtins-py-dict-methods.h",
    "//src/builtins/builtins-py-dict-views-methods.cc",
    "//src/builtins/builtins-py-dict-views-methods.h",
    "//src/builtins/builtins-py-list-iterator-methods.cc",
    "//src/builtins/builtins-py-list-iterator-methods.h",
    "//src/builtins/builtins-py-list-methods.cc",
    "//src/builtins/builtins-py-list-methods.h",
    "//src/builtins/builtins-py-object-methods.cc",
    "//src/builtins/builtins-py-object-methods.h",
    "//src/builtins/builtins-py-string-methods.cc",
    "//src/builtins/builtins-py-string-methods.h",
    "//src/builtins/builtins-py-tuple-iterator-methods.cc",
    "//src/builtins/builtins-py-tuple-iterator-methods.h",
    "//src/builtins/builtins-py-tuple-methods.cc",
    "//src/builtins/builtins-py-tuple-methods.h",
    "//src/builtins/builtins-py-type-object-methods.cc",
    "//src/builtins/builtins-py-type-object-methods.h",
    "//src/builtins/builtins-reflection.cc",
    "//src/builtins/builtins-utils.cc",
    "//src/builtins/builtins-utils.h",

    # third_party (第三方库)
    "//third_party/fast_float/fast_float.h",
    "//third_party/rapidhash/rapidhash.h",
  ]

  deps = []
  if (saauso_enable_cpython_compiler) {
    deps += [ ":saauso_cpython312_compiler" ]
  }

  public_deps = [
    ":saauso_infra_public_headers",
    "//build:build_helper_headers",
  ]

  public_configs = [ ":saauso_includes" ]
}

# -----------------------------------------------------------------------------
# 可选前端：CPython312 编译器桥接
# -----------------------------------------------------------------------------
# 受 saauso_enable_cpython_compiler 开关控制：
# - true : 启用 pyc 编译前端相关实现并链接 third_party/cpython312
# - false: 仅保留后端执行链路，适合纯后端回归和无 Python 开发库环境
source_set("saauso_cpython312_compiler") {
  # 理论上 saauso_cpython312_compiler 作为基础组件，
  # 不应该对除虚拟机内核 saauso_core 之外的任何依赖开放！
  #
  # 不过 ut 是一个特例，因为它其中包含了针对
  # saauso_cpython312_compiler 的单测！
  visibility = [
    "//:saauso_core",
    "//test/unittests:ut",
  ]

  if (saauso_enable_cpython_compiler) {
    sources = [
      "//src/code/cpython312-pyc-compiler.cc",
      "//src/code/cpython312-pyc-compiler.h",
    ]

    deps = [
      "//build:build_helper_headers",
      "//third_party/cpython312",
    ]

    configs += [
      ":saauso_includes",
      "//third_party/cpython312:python312_config",
    ]

    all_dependent_configs = [ "//third_party/cpython312:python312_config" ]
  } else {
    sources = []
  }
}

# -----------------------------------------------------------------------------
# Embedder API 目标（Phase0/1）
# -----------------------------------------------------------------------------
# 该目标承载 include/saauso-embedder.h + src/api/* 桥接实现。
# 关键约束：
# 1) 对外只通过 saauso_public_api_includes 暴露 include/。
# 2) 在开启 cpython 前端时，需显式依赖 saauso_cpython312_compiler，
#    否则可能出现链接期缺符号（如 EmbeddedPython312Compiler::*）。
source_set("embedder_api") {
  sources = [
    # 暴露给嵌入方的头文件
    "//include/saauso-container.h",
    "//include/saauso-context.h",
    "//include/saauso-exception.h",
    "//include/saauso-function-callback.h",
    "//include/saauso-function.h",
    "//include/saauso-isolate.h",
    "//include/saauso-local-handle.h",
    "//include/saauso-locker.h",
    "//include/saauso-object.h",
    "//include/saauso-primitive.h",
    "//include/saauso-script.h",
    "//include/saauso-value.h",
    "//include/saauso.h",

    # API 内部实现
    "//src/api/api-bridge-access.h",
    "//src/api/api-container.cc",
    "//src/api/api-context.cc",
    "//src/api/api-exception-support.cc",
    "//src/api/api-exception-support.h",
    "//src/api/api-exception.cc",
    "//src/api/api-function-callback-support.cc",
    "//src/api/api-function-callback-support.h",
    "//src/api/api-function-callback.cc",
    "//src/api/api-function.cc",
    "//src/api/api-handle-utils.h",
    "//src/api/api-isolate-utils.h",
    "//src/api/api-isolate.cc",
    "//src/api/api-local-handle.cc",
    "//src/api/api-locker.cc",
    "//src/api/api-objects.cc",
    "//src/api/api-primitive.cc",
    "//src/api/api-script.cc",
    "//src/api/api-value.cc",
  ]
  deps = [ ":saauso_core" ]
  public_configs = [ ":saauso_public_api_includes" ]
}

# -----------------------------------------------------------------------------
# CLI 可执行入口（开发调试用）
# -----------------------------------------------------------------------------
executable("vm") {
  sources = [ "//src/main.cc" ]
  deps = [ ":saauso_core" ]
}

# -----------------------------------------------------------------------------
# Embedder 示例（Phase0/1 验证样例）
# -----------------------------------------------------------------------------
executable("embedder_hello_world") {
  testonly = true
  sources = [ "//samples/hello-world.cc" ]
  deps = [ ":embedder_api" ]
}

executable("embedder_game_engine_demo") {
  testonly = true
  sources = [ "//samples/game-engine-demo.cc" ]
  deps = [ ":embedder_api" ]
}

# -----------------------------------------------------------------------------
# 统一测试入口
# -----------------------------------------------------------------------------
# 说明：
# - 保留既有 test/unittests:ut 作为主回归集合。
# - 额外纳入 Embedder Phase0/1 的边界检查与单测，确保演进不回退。
group("all_ut") {
  testonly = true
  deps = [
    "//test/embedder:embedder_ut",
    "//test/unittests:ut",
  ]
}
