executable("embedder_ut") {
  testonly = true
  sources = [
    "./embedder-handle-thread-unittest.cc",
    "./embedder-interop-unittest.cc",
    "./embedder-isolate-unittest.cc",
    "./embedder-script-unittest.cc",
  ]
  deps = [
    "//:embedder_api",
    "//testing/gtest",
  ]
  configs += [ "//:saauso_includes" ]
}
