# Copyright 2026 the S.A.A.U.S.O project authors. All rights reserved.
# Use of this source code is governed by a GNU-style license that can be
# found in the LICENSE file.

executable("embedder_ut") {
  testonly = true
  sources = [
    "./embedder-interop-callback-unittest.cc",
    "./embedder-interop-context-unittest.cc",
    "./embedder-interop-value-unittest.cc",
    "./embedder-isolate-locker.cc",
    "./embedder-isolate-unittest.cc",
    "./embedder-script-unittest.cc",
    "./embedder-thread-unittest.cc",
    "./lsan-suppressions.cc",
  ]
  deps = [
    "//:embedder_api",
    "//build:build_helper_headers",
    "//testing/gtest",
  ]
  configs += [ "//:saauso_includes" ]
}
