executable("ut") {
  testonly = true

  sources = [
    "./handles/global-handle-unittest.cc",
    "./handles/handle-unittest.cc",
    "./heap/gc-unittest.cc",
    "./lsan-suppressions.cc",
    "./objects/attribute-unittest.cc",
    "./objects/cell-unittest.cc",
    "./objects/factory-boundary-unittest.cc",
    "./objects/py-dict-unittest.cc",
    "./objects/py-float-unittest.cc",
    "./objects/py-list-unittest.cc",
    "./objects/py-module-unittest.cc",
    "./objects/py-object-unittest.cc",
    "./objects/py-smi-unittest.cc",
    "./objects/py-string-unittest.cc",
    "./objects/py-tuple-unittest.cc",
    "./test-helpers.cc",
    "./test-utils.cc",
    "./utils/number-conversion-unittest.cc",
    "./utils/random-number-generator-unittest.cc",
    "./utils/string-search-unittest.cc",
  ]

  if (saauso_enable_cpython_compiler) {
    sources += [
      "./code/compiler-unittest.cc",
      "./code/pyc-file-parser-unittest.cc",
      "./heap/gc-interpreter-stress-unittest.cc",
      "./interpreter/interpreter-attribute-constraints-unittest.cc",
      "./interpreter/interpreter-builtins-bootstrap-unittest.cc",
      "./interpreter/interpreter-builtins-constructor-unittest.cc",
      "./interpreter/interpreter-builtins-method-dispatch-unittest.cc",
      "./interpreter/interpreter-builtins-subclass-gc-unittest.cc",
      "./interpreter/interpreter-call-stack-unittest.cc",
      "./interpreter/interpreter-closure-unittest.cc",
      "./interpreter/interpreter-controlflow-unittest.cc",
      "./interpreter/interpreter-custom-class-attribute-binding-unittest.cc",
      "./interpreter/interpreter-custom-class-build-class-unittest.cc",
      "./interpreter/interpreter-custom-class-builtin-bridge-unittest.cc",
      "./interpreter/interpreter-custom-class-construct-unittest.cc",
      "./interpreter/interpreter-custom-class-core-unittest.cc",
      "./interpreter/interpreter-custom-class-dunder-unittest.cc",
      "./interpreter/interpreter-custom-class-mro-unittest.cc",
      "./interpreter/interpreter-dict-unittest.cc",
      "./interpreter/interpreter-exceptions-unittest.cc",
      "./interpreter/interpreter-exec-unittest.cc",
      "./interpreter/interpreter-functions-unittest.cc",
      "./interpreter/interpreter-import-unittest.cc",
      "./interpreter/interpreter-lambda-unittests.cc",
      "./interpreter/interpreter-list-basic-unittest.cc",
      "./interpreter/interpreter-list-exceptions-unittest.cc",
      "./interpreter/interpreter-list-sort-unittest.cc",
      "./interpreter/interpreter-list-subclass-unittest.cc",
      "./interpreter/interpreter-math-module-unittest.cc",
      "./interpreter/interpreter-ops-unittest.cc",
      "./interpreter/interpreter-random-module-unittest.cc",
      "./interpreter/interpreter-smoke-unittest.cc",
      "./interpreter/interpreter-str-unittest.cc",
      "./interpreter/interpreter-time-module-unittest.cc",
      "./interpreter/interpreter-tuple-unittest.cc",
      "./interpreter/native-print-unittest.cc",
    ]
  }

  deps = [
    "//:saauso_core",
    "//testing/gtest",
  ]

  if (saauso_enable_cpython_compiler) {
    deps += [ "//:saauso_cpython312_compiler" ]
  }
}
