# Copyright 2026 the S.A.A.U.S.O project authors. All rights reserved.
# Use of this source code is governed by a GNU-style license that can be
# found in the LICENSE file.

executable("ut") {
  testonly = true

  sources = [
    # Handle
    "./handles/global-handle-unittest.cc",
    "./handles/handle-thread-unittest.cc",
    "./handles/handle-unittest.cc",

    # Heap
    "./heap/gc-unittest.cc",
    "./heap/old-space-unittests.cc",

    # Object
    "./objects/attribute-unittest.cc",
    "./objects/cell-unittest.cc",
    "./objects/factory-boundary-unittest.cc",
    "./objects/py-dict-unittest.cc",
    "./objects/py-float-unittest.cc",
    "./objects/py-list-unittest.cc",
    "./objects/py-module-unittest.cc",
    "./objects/py-object-unittest.cc",
    "./objects/py-smi-unittest.cc",
    "./objects/py-string-unittest.cc",
    "./objects/py-tuple-unittest.cc",

    # Utils
    "./utils/number-conversion-unittest.cc",
    "./utils/random-number-generator-unittest.cc",
    "./utils/string-search-unittest.cc",

    # Infra
    "./lsan-suppressions.cc",
    "./test-helpers.cc",
    "./test-utils.cc",
  ]

  deps = [
    "//:saauso_core",
    "//testing/gtest",
  ]

  if (saauso_enable_cpython_compiler) {
    sources += [
      "./code/compiler-unittest.cc",
      "./code/pyc-file-parser-unittest.cc",
      "./heap/gc-interpreter-stress-unittest.cc",
      "./interpreter/interpreter-attribute-constraints-unittest.cc",
      "./interpreter/interpreter-builtins-bootstrap-unittest.cc",
      "./interpreter/interpreter-builtins-constructor-unittest.cc",
      "./interpreter/interpreter-builtins-method-dispatch-unittest.cc",
      "./interpreter/interpreter-builtins-subclass-gc-unittest.cc",
      "./interpreter/interpreter-call-stack-unittest.cc",
      "./interpreter/interpreter-closure-unittest.cc",
      "./interpreter/interpreter-controlflow-unittest.cc",
      "./interpreter/interpreter-custom-class-attribute-binding-unittest.cc",
      "./interpreter/interpreter-custom-class-build-class-unittest.cc",
      "./interpreter/interpreter-custom-class-builtin-bridge-unittest.cc",
      "./interpreter/interpreter-custom-class-construct-unittest.cc",
      "./interpreter/interpreter-custom-class-core-unittest.cc",
      "./interpreter/interpreter-custom-class-dunder-unittest.cc",
      "./interpreter/interpreter-custom-class-mro-unittest.cc",
      "./interpreter/interpreter-dict-unittest.cc",
      "./interpreter/interpreter-exceptions-unittest.cc",
      "./interpreter/interpreter-exec-unittest.cc",
      "./interpreter/interpreter-functions-unittest.cc",
      "./interpreter/interpreter-import-unittest.cc",
      "./interpreter/interpreter-lambda-unittests.cc",
      "./interpreter/interpreter-list-basic-unittest.cc",
      "./interpreter/interpreter-list-exceptions-unittest.cc",
      "./interpreter/interpreter-list-sort-unittest.cc",
      "./interpreter/interpreter-list-subclass-unittest.cc",
      "./interpreter/interpreter-math-module-unittest.cc",
      "./interpreter/interpreter-ops-unittest.cc",
      "./interpreter/interpreter-random-module-unittest.cc",
      "./interpreter/interpreter-smoke-unittest.cc",
      "./interpreter/interpreter-str-unittest.cc",
      "./interpreter/interpreter-time-module-unittest.cc",
      "./interpreter/interpreter-tuple-unittest.cc",
      "./interpreter/native-print-unittest.cc",
    ]

    deps += [ "//:saauso_cpython312_compiler" ]
  }
}
